# timing

./: .gitignore  CMakeLists.txt  README.org  database_manager.cc  database_manager.h  main.cc  time_table.cc  time_table.h
config/: project_config.toml
database/: work_times_MK.db
sqlite3/: CMakeLists.txt
src/: Doxyfile  database_manager.cc  database_manager.h  main.cc  service_init.cc  service_init.h  test.cc  time_log.cc  time_log.h  time_table.cc  time_table.h  timelog_service_init.cc  timelog_service_init.h  websocket_async_example.cc
tests/: login.sh  logout.sh  testcase_1.sh
toml/: CMakeLists.txt  Makefile  cmake_install.cmake
